openshift/deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: DEPLOYNAME
  name: DEPLOYNAME
  namespace: makzak65-dev
spec:
  replicas: 1
  selector:
    app: DEPLOYNAME
  template:
    metadata:
      labels:
        app: DEPLOYNAME
    spec:
      containers:
        - env:
            - name: PROFILE
              value: dev
          image: >-
            http://0.0.0.0:8082/repository/docker-release/rest_demo:BRANCHNAME
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 20
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          name: my-project
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 0.2
              memory: 1Gi
#          volumeMounts:
#            - mountPath: /etc/my-app.conf
#              name: my-app-config-prop
#              subPath: application.properties
#        volumes:
#          - configMap:
#              defaultMode: 420
#              name: my-app-config
#            name: my-app-config-prop
triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
        - gds
      from:
        kind: ImageStreamTag
        name: 'rest_demo:BRANCHNAME'
    type: ImageChange
