openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest_demo
  namespace: makzak65-dev
spec:
  selector:
    app: rest_demo
  ports:
    - protocol: TCP
      port: 8070
